Create local with custom password (incomplete)