@@ -1,5 +1,6 @@
-set CQ_RUNMODE={{instance.typeName}},local
 set CQ_PORT={{instance.httpPort}}
-set CQ_JVM_OPTS=-Xmx1024m -XX:MaxPermSize=256M -Djava.awt.headless=true -Xdebug -Xrunjdwp:transport=dt_socket,address={{instance.debugPort}},server=y,suspend=n
+set CQ_RUNMODE={{instance.runModesString}}
+set CQ_JVM_OPTS={{instance.jvmOptsString}}
+set START_OPTS=start -c {{handle.staticDir}} -i launchpad {{instance.startOptsString}}
 
-call crx-quickstart/bin/start.bat
+call crx-quickstart\bin\start.bat
